deploy: f6c4363269ad885a7e6eaf3162d1004e79922dd6

--- a/ch06-02-match.html
+++ b/ch06-02-match.html
@@ -371,7 +371,7 @@ To learn more, run the command again with --verbose.
 </span>    let some_u8_value = 0u8;
     match some_u8_value {
         1 =&gt; println!(&quot;one&quot;),
-        3 =&gt; println!(&quot;three&quot;),
+        3 =&gt; println!(&quot;三&quot;),
         5 =&gt; println!(&quot;five&quot;),
         7 =&gt; println!(&quot;seven&quot;),
         _ =&gt; (),
