--- a/ch07-02-defining-modules-to-control-scope-and-privacy.html
+++ b/ch07-02-defining-modules-to-control-scope-and-privacy.html
@@ -168,8 +168,8 @@
                 <div id="content" class="content">
                     <main>
                         <h2><a class="header" href="#定義模組來控制作用域與隱私權" id="定義模組來控制作用域與隱私權">定義模組來控制作用域與隱私權</a></h2>
-<p>在此段落，我們將討論模組以及其他模組系統的部分，像是*路徑（paths）*項允許你來命名項目，而 <code>use</code> 關鍵字可以將路徑引入作用域，再來 <code>pub</code> 關鍵字可以讓指定的項目對外公開。我們還會討論到 <code>as</code> 關鍵字、外部套件以及全域（glob）運算子。現在讓我們先專注在模組吧！</p>
-<p><em>模組（Modules）<em>讓我們在 crate 內組織程式碼成數個群組以便使用且增加閱讀性。模組也能控制項目的</em>隱私權</em>，也就是該項目能否被外部程式碼（<em>公開（public）</em>）使用，或者只作爲內部實作細節，對外是無法使用的（<em>私有（private）</em>）。</p>
+<p>在此段落，我們將討論模組以及其他模組系統的部分，像是<em>路徑（paths）</em> 允許你來命名項目，而 <code>use</code> 關鍵字可以將路徑引入作用域，再來 <code>pub</code> 關鍵字可以讓指定的項目對外公開。我們還會討論到 <code>as</code> 關鍵字、外部套件以及全域（glob）運算子。現在讓我們先專注在模組吧！</p>
+<p><em>模組（Modules）</em> 能讓我們在 crate 內組織程式碼成數個群組以便使用且增加閱讀性。模組也能控制項目的<em>隱私權</em>，也就是該項目能否被外部程式碼<em>公開（public）</em> 使用，或者只作爲內部<em>私有（private）</em> 實作細節，對外是無法使用的。</p>
 <p>舉例來說，讓我們建立一個提供餐廳功能的函式庫 crate。我們定義一個函式簽名不過本體會是空的，好讓我們專注在程式組織，而非餐廳程式碼的實作。</p>
 <p>在餐飲業中，餐廳有些地方會被稱作<em>前端（front of house）<em>而其他部分則是</em>後端（back of house）</em>。前端是消費者的所在區域，這裡是安排顧客座位、點餐並結帳、吧台調酒的地方。而後台則是主廚與廚師工作的廚房、洗碗工洗碗以及經理管理行政工作的地方。</p>
 <p>要讓我們的 crate 像真正的餐廳一樣的話，我們可以組織函式進入模組中。要建立一個新的函式庫叫做 <code>restaurant</code> 的話，請執行 <code>cargo new --lib restaurant</code>。然後將範例 7-1 的程式碼放入 <em>src/lib.rs</em> 中，這定義了一些模組與函式簽名。</p>
@@ -194,7 +194,7 @@
 </span></code></pre></pre>
 <p><span class="caption">範例 7-1：<code>front_of_house</code> 模組包含了其他擁有函式的模組</span></p>
 <p>我們用 <code>mod</code> 關鍵字加上模組的名稱（在此例爲 <code>front_of_house</code>）來定義一個模組，並用大括號涵蓋模組的本體。在模組中，我們可以再包含其他模組，在此例中我們包含了 <code>hosting</code> 和 <code>serving</code>。模組還能包含其他項目，像是結構體、枚舉、常數、特徵、或像是 範例 7-1 的函式。</p>
-<p>使用模組的話，我們就能加相關的定義組合起來，並用名稱指出會合它們互相關聯。程式設計師在使用此程式碼時就能快找到他們想使用的定義，因爲他們就不必遍歷所有的定義，只要觀察依據組合起來的模組名稱就好。要對此程式碼增加新功能的開發者也能知道該將程式碼放在哪裡，以維持程式碼的組織。</p>
+<p>使用模組的話，我們就能將相關的定義組合起來，並用名稱指出會與它們互相關聯。程式設計師在使用此程式碼時就能快速找到他們想使用的定義，因爲他們就不必遍歷所有的定義，只要觀察依據組合起來的模組名稱就好。要對此程式碼增加新功能的開發者也能知道該將程式碼放在哪裡，以維持程式碼的組織。</p>
 <p>稍早我們提到說 <em>src/main.rs</em> 和 <em>src/lib.rs</em> 屬於 crate 的源頭。之所以這樣命名的原因是因爲這兩個文件的內容都會在 crate 源頭模組架構中組成一個模組叫做 <code>crate</code>，這樣的結構稱之爲<em>模組樹（module tree）</em>。</p>
 <p>範例 7-2 顯示了範例 7-1 的模組樹架構。</p>
 <pre><code class="language-text">crate
@@ -208,7 +208,7 @@
          └── take_payment
 </code></pre>
 <p><span class="caption">範例 7-2：範例 7-1 的模組樹</span></p>
-<p>此樹顯示了有些模組是包含在其他模組內的（比方說 <code>hosting</code> 就在 <code>front_of_house</code> 底下）。此樹也顯示了有些模組是其他模組的<em>同輩（siblings）</em>，代表它們是在同模組底下定義的（<code>hosting</code> 和 <code>serving</code> 都在 <code>front_of_house</code> 底下定義）。繼續沿用家庭來譬喻的話，如果模組 A 被包含在模組 B 中，我們會說模組 A 是模組 B 的<em>下一代（child）</em>，而模組 B 是模組 A 的<em>上一代（parent）</em>。注意到整個模組樹的源頭是一個隱性模組叫做 <code>crate</code>。</p>
+<p>此樹顯示了有些模組是包含在其他模組內的（比方說 <code>hosting</code> 就在 <code>front_of_house</code> 底下）。此樹也顯示了有些模組是其他模組的<em>同輩（siblings）</em>，代表它們是在同模組底下定義的（<code>hosting</code> 和 <code>serving</code> 都在 <code>front_of_house</code> 底下定義）。繼續沿用家庭來譬喻的話，如果模組 A 被包含在模組 B 中，我們會說模組 A 是模組 B 的<em>下一代（child）</em>，而模組 B 是模組 A 的<em>上一代（parent）</em>。注意到整個模組樹的跟是一個隱性模組叫做 <code>crate</code>。</p>
 <p>模組樹可能會讓你想到電腦中檔案系統的目錄樹，這是一個非常恰當的比喻！就像檔案系統中的目錄，你使用模組來組織你的程式碼。而且就像目錄中的檔案，我們需要有方法可以找到我們的模組。</p>
 <blockquote>
 <ul>
