--- a/ch11-01-writing-tests.html
+++ b/ch11-01-writing-tests.html
@@ -234,7 +234,7 @@ mod tests {
 <span class="boring">
 </span><span class="boring">fn main() {}
 </span></code></pre></pre>
-<p>然後在執行一次 <code>cargo test</code>，輸出會顯示 <code>exploration</code> 而非 <code>it_works</code>：</p>
+<p>然後再執行一次 <code>cargo test</code>，輸出會顯示 <code>exploration</code> 而非 <code>it_works</code>：</p>
 <pre><code class="language-console">$ cargo test
    Compiling adder v0.1.0 (file:///projects/adder)
     Finished test [unoptimized + debuginfo] target(s) in 0.59s
