--- a/ch18-03-pattern-syntax.html
+++ b/ch18-03-pattern-syntax.html
@@ -177,7 +177,7 @@
     match x {
         1 =&gt; println!(&quot;one&quot;),
         2 =&gt; println!(&quot;two&quot;),
-        3 =&gt; println!(&quot;three&quot;),
+        3 =&gt; println!(&quot;三&quot;),
         _ =&gt; println!(&quot;anything&quot;),
     }
 <span class="boring">}
@@ -212,7 +212,7 @@
 
     match x {
         1 | 2 =&gt; println!(&quot;one or two&quot;),
-        3 =&gt; println!(&quot;three&quot;),
+        3 =&gt; println!(&quot;三&quot;),
         _ =&gt; println!(&quot;anything&quot;),
     }
 <span class="boring">}
