--- a/ch06-03-if-let.html
+++ b/ch06-03-if-let.html
@@ -172,7 +172,7 @@
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    let some_u8_value = Some(0u8);
     match some_u8_value {
-        Some(3) =&gt; println!(&quot;three&quot;),
+        Some(3) =&gt; println!(&quot;三&quot;),
         _ =&gt; (),
     }
 <span class="boring">}
@@ -183,7 +183,7 @@
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span><span class="boring">    let some_u8_value = Some(0u8);
 </span>    if let Some(3) = some_u8_value {
-        println!(&quot;three&quot;);
+        println!(&quot;三&quot;);
     }
 <span class="boring">}
 </span></code></pre></pre>
@@ -241,8 +241,8 @@
 </span></code></pre></pre>
 <p>如果你的程式碼邏輯遇到使用 <code>match</code> 表達會太囉唆的話，記得 <code>if let</code> 也在你的 Rust 工具箱中可以使用。</p>
 <h2><a class="header" href="#總結" id="總結">總結</a></h2>
-<p>我們現在含蓋了如何使用枚舉來建立一系列枚舉數值的自訂型別。我們展示了邊準函式庫的 <code>Option&lt;T&gt;</code> 型別如何用型別系統來預防錯誤。當枚舉數值其內有資料時，你可以依照你想處理的情況數量，使用 <code>match</code> 或 <code>if let</code> 來取出並使用那些數值。</p>
-<p>你的 Rust 程式碼現在能夠使用結構體與枚舉來表達你所知領域的概念了。在你的 API 建立自訂型別可以確保型別安全，編譯器會保證你的函式只會取得該函式預期的型別數值。</p>
+<p>我們現在涵蓋了如何使用枚舉來建立一系列枚舉數值的自訂型別。我們展示了標準函式庫的 <code>Option&lt;T&gt;</code> 型別如何用型別系統來預防錯誤。當枚舉數值其內有資料時，你可以依照你想處理的情況數量，使用 <code>match</code> 或 <code>if let</code> 來取出並使用那些數值。</p>
+<p>你的 Rust 程式碼現在能夠使用結構體與枚舉來表達你所相關研究領域的概念了。在你的 API 建立自訂型別可以確保型別安全，編譯器會保證你的函式只會取得該函式預期的型別數值。</p>
 <p>接下來爲了提供組織完善且直觀的的 API 供你的使用者使用，並只表達出使用者確切所需要的內容，我們需要瞭解 Rust 的模組。</p>
 <blockquote>
 <ul>
