--- a/ch07-01-packages-and-crates.html
+++ b/ch07-01-packages-and-crates.html
@@ -168,7 +168,7 @@
                 <div id="content" class="content">
                     <main>
                         <h2><a class="header" href="#套件與-crates" id="套件與-crates">套件與 Crates</a></h2>
-<p>首先我們要介紹的第一個模組系統部分爲套件與 crates。一個 crate 指的是一個二進制執行檔或函式庫。<em>crate 的源頭</em>會是一個原始檔案，讓 Rust 的編譯器可以作爲起始點並組織 crate 模組的地方（我們會在<a href="ch07-02-defining-modules-to-control-scope-and-privacy.html">「定義模組來控制作用域與隱私權」</a><!-- ignore -->的段落更加解釋模組）。*套件（package）*則是提供一系列功能的一或數個 crate。一個套件會包含一個 <em>Cargo.toml</em> 檔案來解釋如何建構那些 crate。</p>
+<p>首先我們要介紹的第一個模組系統部分爲套件與 crates。一個 crate 指的是一個二進制執行檔或函式庫。<em>crate 的源頭</em>會是一個原始檔案，讓 Rust 的編譯器可以作爲起始點並組織 crate 模組的地方（我們會在<a href="ch07-02-defining-modules-to-control-scope-and-privacy.html">「定義模組來控制作用域與隱私權」</a><!-- ignore -->的段落更加解釋模組）。<em>套件（package）</em> 則是提供一系列功能的一或數個 crate。一個套件會包含一個 <em>Cargo.toml</em> 檔案來解釋如何建構那些 crate。</p>
 <p>套件依據一些規則來組成。一個套件<em>必須</em>包含零或一個函式庫 crate，不能再更多。它可以包含多少二進制執行檔 crate 都沒關係，但一定得至少提供一個 crate（無論是函式庫或二進制執行檔）。</p>
 <p>讓我們看看當我們建立一個套件時發生了什麼事。首先我們先輸入 <code>cargo new</code> 命令：</p>
 <pre><code class="language-console">$ cargo new my-project
@@ -180,10 +180,10 @@ $ ls my-project/src
 main.rs
 </code></pre>
 <p>當我們輸入命令時，Cargo 會建立一個 <em>Cargo.toml</em> 檔案並以此作爲套件依據。查看 <em>Cargo.toml</em> 的內容時，你會發現沒有提到 <em>src/main.rs</em>，這是因爲 Cargo 遵循一個常規，也就是 <em>src/main.rs</em> 就是與套件同名的
-二進制 crate 的 crate 源頭。同樣地，Cargo 也會知道如果套件目錄包含 <em>src/lib.rs</em>的話，則該套件就會包含與套件同名的 函式庫 crate。Cargo 會將 crate 源頭檔案傳遞給 <code>rustc</code> 來建構函式庫或二進制執行檔</p>
+二進制 crate 的 crate 源頭。同樣地，Cargo 也會知道如果套件目錄包含 <em>src/lib.rs</em>的話，則該套件就會包含與套件同名的函式庫 crate。Cargo 會將 crate 源頭檔案傳遞給 <code>rustc</code> 來建構函式庫或二進制執行檔。</p>
 <p>我們在此的套件只有包含 <em>src/main.rs</em> 代表它只有一個同名的二進制 crate 叫做 <code>my-project</code>。如果套件包含 <em>src/main.rs</em> 與 <em>src/lib.rs</em> 的話，它就有兩個 crate：一個函式庫與一個二進制執行檔，兩者都與套件同名。一個套件可以有多個二進制 crate，只要將檔案放在 <em>src/bin</em> 目錄底下就好，每個檔案會被視爲獨立的二進制 crate。</p>
-<p>Crate 會將相關的程式碼組織在一個作用域內，好讓其通能易於分享給其他專案。舉例來說，我們在<a href="ch02-00-guessing-game-tutorial.html#generating-a-random-number">第二章</a><!-- ignore -->使用到的 <code>rand</code> crate 就提供了產生隨機數值的功能。我們可以將 <code>rand</code> crate 引入我們的專案，讓我們可以在我們的專案使用這項功能。所有 <code>rand</code> crate 提供的功能都可以透過 crate 的名稱 <code>rand</code> 來索取。</p>
-<p>將 crate 的功能維持在各自的作用域內能清楚地表達特定功能是定義在我們自己的 crate 還是 <code>rand</code> crate 的，以防止可能的衝突。舉例來說，<code>rand</code> crate 提供了一個特徵叫做 <code>Rng</code>，我們也可以在我們自己的 crate 中定義一個 <code>struct</code> 叫做 <code>Rng</code>。由於 crate 的功能都位於它所屬的作用域的命名空間底下，當我們加入 <code>rand</code> 作爲依賴時，編譯器不會被搞不清楚是哪個 <code>Rng</code> 被使用。在我們的 crate 中，它指的是我們定義的 <code>struct Rng</code>。而要使用 <code>rand</code> crate 的 <code>Rng</code> 特徵的話，我們得這樣使用 <code>rand::Rng</code>。</p>
+<p>Crate 會將相關的程式碼組織在一個作用域內，好讓其能易於分享給其他專案。舉例來說，我們在<a href="ch02-00-guessing-game-tutorial.html#%E7%94%A2%E7%94%9F%E9%9A%A8%E6%A9%9F%E6%95%B8%E5%AD%97">第二章</a><!-- ignore -->使用到的 <code>rand</code> crate 就提供了產生隨機數值的功能。我們可以將 <code>rand</code> crate 引入我們的專案，讓我們可以在我們的專案使用這項功能。所有 <code>rand</code> crate 提供的功能都可以透過 crate 的名稱 <code>rand</code> 來索取。</p>
+<p>將 crate 的功能維持在各自的作用域內能清楚地表達特定功能是定義在我們自己的 crate 還是 <code>rand</code> crate 的，以防止可能的衝突。舉例來說，<code>rand</code> crate 提供了一個特徵叫做 <code>Rng</code>，我們也可以在我們自己的 crate 中定義一個 <code>struct</code> 叫做 <code>Rng</code>。由於 crate 的功能都位於它所屬的作用域的命名空間底下，當我們加入 <code>rand</code> 作爲依賴時，編譯器不會搞不清楚是哪個 <code>Rng</code> 被使用。在我們的 crate 中，它指的是我們定義的 <code>struct Rng</code>。而要使用 <code>rand</code> crate 的 <code>Rng</code> 特徵的話，我們得這樣使用 <code>rand::Rng</code>。</p>
 <p>接下來讓我們繼續討論模組系統吧！</p>
 <blockquote>
 <ul>
