--- a/ch08-01-vectors.html
+++ b/ch08-01-vectors.html
@@ -168,7 +168,7 @@
                 <div id="content" class="content">
                     <main>
                         <h2><a class="header" href="#透過向量儲存列表" id="透過向量儲存列表">透過向量儲存列表</a></h2>
-<p>我們第一個要來看的集合是 <code>Vec&lt;T&gt;</code> 常稱爲<em>向量（vector）</em> 。向量允許你在一個資料結構儲存不止一個數值，而且該結構的記憶體會接連排列所有數值。它們很適合用來處理你手上的項目列表，像是一個檔案中每行的文字，或是購物車內每像物品。</p>
+<p>我們第一個要來看的集合是 <code>Vec&lt;T&gt;</code> 常稱爲<em>向量（vector）</em> 。向量允許你在一個資料結構儲存不止一個數值，而且該結構的記憶體會接連排列所有數值。它們很適合用來處理你手上的項目列表，像是一個檔案中每行的文字，或是購物車內每項物品。</p>
 <h3><a class="header" href="#建立新的向量" id="建立新的向量">建立新的向量</a></h3>
 <p>要建立一個新的空向量的話，我們可以呼叫 <code>Vec::new</code> 函式，如範例 8-1 所示。</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
@@ -176,8 +176,8 @@
 <span class="boring">}
 </span></code></pre></pre>
 <p><span class="caption">範例 8-1建立一個儲存數值型別爲 <code>i32</code> 的空向量</span></p>
-<p>注意到我們在此加了型別詮釋。因爲我們沒有對此向量插入任何數值，Rust 不知道我們想儲存什麼類型的元素。這是一項重點，向量是用泛型（generics）實作，我們會在第十章說明如何爲你自己的型別使用泛型。現在我們只需要知道標準函式庫提供的 <code>Vec&lt;T&gt;</code> 型別可以持有任意型別，然後當特定向量要持有特定型別時，該型別會標是在尖括號內。在範例 8-1，我們告訴 Rust 在 <code>v</code> 中的 <code>Vec&lt;T&gt;</code> 會持有 <code>i32</code> 型別的元素。</p>
-<p>在更實際的程式碼中，當你插入數值時，Rust 通常都能推導出型別來。所以你不太常會需要指明型別詮釋。建立 <code>Vec&lt;T&gt;</code> 的同進行初始化是更常見的，爲此 Rust 提供了 <code>vec!</code> 以便使用。此巨集會建立一個新的向量並取得你提供的數值。在範例 8-2 中，我們建立了一個新的 <code>Vec&lt;i32&gt;</code> 並擁有數值 <code>1</code>、<code>2</code> 和 <code>3</code>。整數型別爲 <code>i32</code> 是因爲這是預設整數型別，如同我們在第三章的<a href="ch03-02-data-types.html#data-types">「資料型別」</a><!-- ignore --> 段落提到的一樣。</p>
+<p>注意到我們在此加了型別詮釋。因爲我們沒有對此向量插入任何數值，Rust 不知道我們想儲存什麼類型的元素。這是一項重點，向量是用泛型（generics）實作，我們會在第十章說明如何爲你自己的型別使用泛型。現在我們只需要知道標準函式庫提供的 <code>Vec&lt;T&gt;</code> 型別可以持有任意型別，然後當特定向量要持有特定型別時，該型別會標示在尖括號內。在範例 8-1，我們告訴 Rust 在 <code>v</code> 中的 <code>Vec&lt;T&gt;</code> 會持有 <code>i32</code> 型別的元素。</p>
+<p>在更實際的程式碼中，當你插入數值時，Rust 通常都能推導出型別來。所以你不太常會需要指明型別詮釋。建立 <code>Vec&lt;T&gt;</code> 的同時進行初始化是很常見的，爲此 Rust 提供了 <code>vec!</code> 以便使用。此巨集會建立一個新的向量並取得你提供的數值。在範例 8-2 中，我們建立了一個新的 <code>Vec&lt;i32&gt;</code> 並擁有數值 <code>1</code>、<code>2</code> 和 <code>3</code>。整數型別爲 <code>i32</code> 是因爲這是預設整數型別，如同我們在第三章的<a href="ch03-02-data-types.html#data-types">「資料型別」</a><!-- ignore --> 段落提到的一樣。</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    let v = vec![1, 2, 3];
 <span class="boring">}
@@ -203,8 +203,8 @@
 </span>    {
         let v = vec![1, 2, 3, 4];
 
-        // do stuff with v
-    } // &lt;- v goes out of scope and is freed here
+        // 使用 v 做些事情
+    } // &lt;- v 在此離開作用域並釋放
 <span class="boring">}
 </span></code></pre></pre>
 <p><span class="caption">範例 8-4：顯示向量及其元素在哪裡被釋放</span></p>
@@ -216,16 +216,16 @@
 </span>    let v = vec![1, 2, 3, 4, 5];
 
     let third: &amp;i32 = &amp;v[2];
-    println!(&quot;The third element is {}&quot;, third);
+    println!(&quot;第三個元素爲 {}&quot;, third);
 
     match v.get(2) {
-        Some(third) =&gt; println!(&quot;The third element is {}&quot;, third),
-        None =&gt; println!(&quot;There is no third element.&quot;),
+        Some(third) =&gt; println!(&quot;第三個元素爲 {}&quot;, third),
+        None =&gt; println!(&quot;第三個元素並不存在。&quot;),
     }
 <span class="boring">}
 </span></code></pre></pre>
-<p><span class="caption">範例 8-5：使用索引語法或 <code>get</code> 方法來取的向量項目</span></p>
-<p>我們要注意兩個地方。首先，我們使用了索引數值 <code>2</code> 來獲取地三個元素：向量可以用數字來索引，從零開始計算。第二，使用 <code>&amp;</code> 和 <code>[]</code> 會給我們一個引用，而使用 <code>get</code> 方法加上一個索引作爲引數，則會給我們 <code>Option&lt;&amp;T&gt;</code>。</p>
+<p><span class="caption">範例 8-5：使用索引語法或 <code>get</code> 方法來取得向量項目</span></p>
+<p>我們要注意兩個地方。首先，我們使用了索引數值 <code>2</code> 來獲取第三個元素：向量可以用數字來索引，從零開始計算。第二，使用 <code>&amp;</code> 和 <code>[]</code> 會給我們一個引用，而使用 <code>get</code> 方法加上一個索引作爲引數，則會給我們 <code>Option&lt;&amp;T&gt;</code>。</p>
 <p>Rust 有兩種取得元素引用的方式，所以能以此決定程式的行爲。像是當你使用了一個索引但向量卻沒有對應的元素的情況。讓我們看看一個範例，我們有一個向量擁有五個元素，但我們嘗試用索引 100 來取得對應數值，如範例 8-6 所示。</p>
 <pre><pre class="playground"><code class="language-rust should_panic panics"><span class="boring">fn main() {
 </span>    let v = vec![1, 2, 3, 4, 5];
@@ -236,7 +236,7 @@
 </span></code></pre></pre>
 <p><span class="caption">範例 8-6：嘗試對只有五個元素的向量取得索引 100 的值</span></p>
 <p>當我們執行程式時，第一個 <code>[]</code> 方法會讓程式恐慌，因爲它引用了不存在的元素。此方法適用於當你希望一有無效索引時就讓程式崩潰的狀況。</p>
-<p>當你使用 <code>get</code> 方法來索取向量不存在的索引時，它會回傳 <code>None</code> 而不會恐慌。如果正常情況下偶而會不小心存取超出向量範圍索引的話，你就會想要只用此方法。你的程式碼就會有個邏輯專門處理 <code>Some(&amp;element)</code> 或 <code>None</code>，如同第六章所述。舉例來說，可能會有由使用者輸入的索引。如果他不小心輸入太大的數字的話，程式可以回傳 <code>None</code>，你可以告訴使用者目前向量有多少項目，並讓他們可以再輸入一次。這會比直接讓程式崩潰還來的親民，他們可能只是不小心打錯而已！</p>
+<p>當你使用 <code>get</code> 方法來索取向量不存在的索引時，它會回傳 <code>None</code> 而不會恐慌。如果正常情況下偶而會不小心存取超出向量範圍索引的話，你就會想要只用此方法。你的程式碼就會有個邏輯專門處理 <code>Some(&amp;element)</code> 或 <code>None</code>，如同第六章所述。舉例來說，可能會有由使用者輸入的索引。如果他不小心輸入太大的數字的話，程式可以回傳 <code>None</code>，你可以告訴使用者目前向量有多少項目，並讓他們可以再輸入一次。這會比直接讓程式崩潰還來的友善，他們可能只是不小心打錯而已！</p>
 <p>當程式有個有效引用時，借用檢查器（borrow checker）會貫徹所有權以及借用規則（如第四章所述）來確保此引用及其他對向量內容的引用都是有效的。回想一下有個規則是我們不能在同個作用域同時擁有可變與不可變引用。這個規則一樣適用於範例 8-7，在此我們有一個向量第一個元素的不可變引用，然後我們嘗試在向量後方新增元素。如果我們嘗試在此動作後繼續使用第一個引用的話，程式會無法執行：</p>
 <pre><code class="language-rust ignore does_not_compile"><span class="boring">fn main() {
 </span>    let mut v = vec![1, 2, 3, 4, 5];
@@ -245,7 +245,7 @@
 
     v.push(6);
 
-    println!(&quot;The first element is: {}&quot;, first);
+    println!(&quot;第一個元素爲 {}&quot;, first);
 <span class="boring">}
 </span></code></pre>
 <p><span class="caption">範例 8-7：在持有一個項目的引用時，還嘗試對向量新增元素</span></p>
@@ -261,7 +261,7 @@ error[E0502]: cannot borrow `v` as mutable because it is also borrowed as immuta
 6 |     v.push(6);
   |     ^^^^^^^^^ mutable borrow occurs here
 7 | 
-8 |     println!(&quot;The first element is: {}&quot;, first);
+8 |     println!(&quot;第一個元素爲 {}&quot;, first);
   |                                          ----- immutable borrow later used here
 
 error: aborting due to previous error
@@ -273,7 +273,7 @@ To learn more, run the command again with --verbose.
 </code></pre>
 <p>範例 8-7 的程式碼看起來好像能執行。爲何第一個元素的引用要在意向量的最後端發生了什麼事呢？此錯誤其實跟向量運作的方式有關：在向量後方新增元素時，如果當前向量的空間不夠在塞入另一個值的話，可能會需要分配新的記憶體並複製舊的元素到新的空間中。這樣一來，第一個元素的索引可能就會指向已經被釋放的記憶體，借用規則會防止程式遇到這樣的情形。</p>
 <blockquote>
-<p>注意：關於 <code>Vec&lt;T&gt;</code> 型別更多的實作細節，歡迎查閱<a href="../nomicon/vec.html">「The Rustonomicon」</a>。</p>
+<p>注意：關於 <code>Vec&lt;T&gt;</code> 型別更多的實作細節，歡迎查閱<a href="https://doc.rust-lang.org/nomicon/vec.html">「The Rustonomicon」</a>。</p>
 </blockquote>
 <h3><a class="header" href="#遍歷向量的元素" id="遍歷向量的元素">遍歷向量的元素</a></h3>
 <p>如果我們想要依序存取向量中每個元素的話，我們可以遍歷所有元素而不必用索引一個一個取得。範例 8-8 闡釋了如何使用 <code>for</code> 迴圈來取得一個 <code>i32</code> 向量中每個元素的不可變引用並印出他們。</p>
@@ -294,10 +294,10 @@ To learn more, run the command again with --verbose.
 <span class="boring">}
 </span></code></pre></pre>
 <p><span class="caption">範例 8-9：遍歷向量中的元素取得可變引用</span></p>
-<p>要改變可變引用指向的數值，在使用 <code>+=</code> 運算子之前，我們需要使用解引用運算子（<code>*</code>）來取得 <code>i</code> 的數值。我們會在第十五章的<a href="ch15-02-deref.html#following-the-pointer-to-the-value-with-the-dereference-operator">「使用解引用運算子追蹤指標的數值」</a>段落來講解更多解引用運算子的細節。</p>
+<p>要改變可變引用指向的數值，在使用 <code>+=</code> 運算子之前，我們需要使用解引用運算子（<code>*</code>）來取得 <code>i</code> 的數值。我們會在第十五章的<a href="ch15-02-deref.html#%E4%BD%BF%E7%94%A8%E8%A7%A3%E5%BC%95%E7%94%A8%E9%81%8B%E7%AE%97%E5%AD%90%E8%BF%BD%E8%B9%A4%E6%8C%87%E6%A8%99%E7%9A%84%E6%95%B8%E5%80%BC">「使用解引用運算子追蹤指標的數值」</a>段落來講解更多解引用運算子的細節。</p>
 <h3><a class="header" href="#使用枚舉來儲存多種型別" id="使用枚舉來儲存多種型別">使用枚舉來儲存多種型別</a></h3>
 <p>在本章的一開始，我們說向量只能儲存同型別的數值。這在某些情況會很不方便，一定會有場合是要儲存不同型別到一個列表中的。幸運的是，枚舉的變體是定義在相同的枚舉型別，所以當我們需要在向量儲存不同型別的元素時，我們可以用枚舉來定義！</p>
-<p>舉例來說，假設我們想從表格中的一行取的數值，但是有些行內的列會包含整數、浮點數以及一些字串。我們可以定義一個枚舉，其變體會持有不同的數值型別，然後所有的枚舉變體都會被視爲相同型別：就是它們的枚舉。接著我們就可以建立一個擁有此枚舉型別的向量，最終達成持有不同行邊。如範例 8-10 所示。</p>
+<p>舉例來說，假設我們想從表格中的一行取得數值，但是有些行內的列會包含整數、浮點數以及一些字串。我們可以定義一個枚舉，其變體會持有不同的數值型別，然後所有的枚舉變體都會被視爲相同型別：就是它們的枚舉。接著我們就可以建立一個擁有此枚舉型別的向量，最終達成持有不同型別。如範例 8-10 所示。</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    enum SpreadsheetCell {
         Int(i32),
@@ -313,7 +313,7 @@ To learn more, run the command again with --verbose.
 <span class="boring">}
 </span></code></pre></pre>
 <p><span class="caption">範例 8-10：用 <code>enum</code> 定義儲存不同型別的枚舉並作爲向量的型別</span></p>
-<p>Rust 需要在編譯時期知道向量的型別以及要在堆積上用到多少記憶體才能儲存每個元素。這樣做第二個好處是我們能知道此向量會顯式哪些型別。如果 Rust 允許向量一次持有任意型別的話，在對向量中每個元素進行處理時，可能就會有一或多種型別會產生錯誤。使用枚舉和 <code>match</code> 表達式讓 Rust 可以在編譯期間確保每個可能的情形都已經處理完善了，如同第六章提到的一樣。</p>
+<p>Rust 需要在編譯時期知道向量的型別以及要在堆積上用到多少記憶體才能儲存每個元素。這樣做第二個好處是我們能顯式知道哪些型別可以放入向量中。如果 Rust 允許向量一次持有任意型別的話，在對向量中每個元素進行處理時，可能就會有一或多種型別會產生錯誤。使用枚舉和 <code>match</code> 表達式讓 Rust 可以在編譯期間確保每個可能的情形都已經處理完善了，如同第六章提到的一樣。</p>
 <p>當你在寫程式時，如果你無法確切知道執行時程式所處理的所有型別的話，枚舉就不管用了。這時使用特徵物件會比較好，我們會在第十七章再來解釋。</p>
 <p>現在我們已經講了一些向量常見的用法，有時間的話記得到<a href="https://doc.rust-lang.org/std/vec/struct.Vec.html">向量的 API 技術文件</a>瞭解標準函式庫中 <code>Vec&lt;T&gt;</code> 所有實用的方法。舉例來說，除了 <code>push</code> 方法以外，還有個 <code>pop</code> 方法可以移除並回傳最後一個元素。接下來讓我們看看下一個集合型別：<code>String</code>！</p>
 <blockquote>
