--- a/ch08-02-strings.html
+++ b/ch08-02-strings.html
@@ -171,8 +171,8 @@
 <p>我們已經在第四章提到字串（String），但現在我們要更加深入探討。Rustaceans 初心者常常會卡在三個環節：Rust 傾向於回報可能的錯誤、字串的資料結構比開發者所熟悉的還要複雜，以及 UTF-8。這些要素讓來自其他程式語言背景的開發者會遇到一些困難。</p>
 <p>我們會在集合章節討論字串的原因是，字串本身就是位元組的集合，且位元組作爲文字呈現時，它會提供一些實用的方法。在此段落我們將和其他集合型別一樣討論 <code>String</code> 的操作，像是建立、更新與讀取。我們還會討論到 <code>String</code> 與其他集合不一樣的地方，像是 <code>String</code> 的索引就比其他集合還複雜，因爲它會依據人們對於 <code>String</code> 資料型別的理解而有所不同。</p>
 <h3><a class="header" href="#什麼是字串" id="什麼是字串">什麼是字串？</a></h3>
-<p>首先我們要好好定義<em>字串（String）<em>這個術語。Rust 在核心語言中只有一個字串型別，那就是字串 slice <code>str</code>，它通常是以借用的形式存在 <code>&amp;str</code>。在第四章中我們提到</em>字串 slice</em>是一個針對存在某處的  UTF-8 編碼資料的引用。舉例來說，字串字面值（String literals）就儲存在程式的二進制檔案中，因此就是字串 slice。</p>
-<p><code>String</code> 型別是 Rust 標準函式庫所提供的型別，並不是核心語言內建的型別，它是可增長的、可變的、可擁有所有權的 UTF-8 編碼字串型別。當 Rustaceans 提及 Rust 中的「字串」時，他們通常指的是 <code>String</code> 以及字串 slice <code>&amp;str</code> 型別，而不只是其中一種型別。雖然此段落大部分都在討論 <code>String</code>，這兩個型別都時常用在 Rust 的標準函式庫中，且 <code>String</code> 與字串 slices 都是 UTF-8 編碼的。</p>
+<p>首先我們要好好定義<em>字串（String）<em>這個術語。Rust 在核心語言中只有一個字串型別，那就是字串切片<code>str</code>，它通常是以借用的形式存在 <code>&amp;str</code>。在第四章中我們提到</em>字串切片</em>是一個針對存在某處的  UTF-8 編碼資料的引用。舉例來說，字串字面值（String literals）就儲存在程式的二進制檔案中，因此就是字串切片。</p>
+<p><code>String</code> 型別是 Rust 標準函式庫所提供的型別，並不是核心語言內建的型別，它是可增長的、可變的、可擁有所有權的 UTF-8 編碼字串型別。當 Rustaceans 提及 Rust 中的「字串」時，他們通常指的是 <code>String</code> 以及字串切片<code>&amp;str</code> 型別，而不只是其中一種型別。雖然此段落大部分都在討論 <code>String</code>，這兩個型別都時常用在 Rust 的標準函式庫中，且 <code>String</code> 與字串切片s 都是 UTF-8 編碼的。</p>
 <p>Rust 的標準函式庫還包含了其他種類的字串型別，像是 <code>OsString</code>、<code>OsStr</code>、<code>CString</code> 以及 <code>CStr</code>。函式庫 crates 更可以提供儲存字串資料的更多選項。你應該會注意到這些型別的結尾都是 <code>String</code> 和 <code>Str</code>，它們分別代表擁有所有權與借用的變體。就像你之前看到的 <code>String</code> 和 <code>str</code> 型別一樣。這些字串型別可以儲存不同編碼的文字或者以不同的記憶體形式呈現。我們不會在本章節討論這些字串型別，要是你想知道如何或何時使用它們的話，你可以查閱它們的 API 技術文件。</p>
 <h3><a class="header" href="#建立新的字串" id="建立新的字串">建立新的字串</a></h3>
 <p>許多 <code>Vec&lt;T&gt;</code> 可使用的方法在 <code>String</code> 也都能用，像是用 <code>new</code> 函式建立新的字串，如範例 8-11 所示。</p>
@@ -220,14 +220,14 @@
 <h3><a class="header" href="#更新字串" id="更新字串">更新字串</a></h3>
 <p>就和 <code>Vec&lt;T&gt;</code> 一樣，如果你插入更多資料的話，<code>String</code> 可以增長大小並變更其內容。除此之外你也可以使用 <code>+</code> 運算子或 <code>format!</code> 巨集來串接 <code>String</code> 數值。</p>
 <h4><a class="header" href="#使用-push_str-和-push-追加字串" id="使用-push_str-和-push-追加字串">使用 <code>push_str</code> 和 <code>push</code> 追加字串</a></h4>
-<p>我們可以使用 <code>push_str</code> 方法來追加一個字串 slice 使字串增長，如範例 8-15 所示。</p>
+<p>我們可以使用 <code>push_str</code> 方法來追加一個字串切片使字串增長，如範例 8-15 所示。</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    let mut s = String::from(&quot;foo&quot;);
     s.push_str(&quot;bar&quot;);
 <span class="boring">}
 </span></code></pre></pre>
-<p><span class="caption">範例 8-15：使用 <code>push_str</code> 方法向 <code>String</code> 追加字串 slice</span></p>
-<p>在這兩行之後，<code>s</code> 會包含 <code>foobar</code>。<code>push_str</code> 方法取得的是字串 slice 因爲我們並不需要取得參數的所有權。舉例來說範例 8-16 就說明了如果 <code>s2</code> 在追加其內容給 <code>s1</code> 之後卻不能使用的話，就很不妙了。</p>
+<p><span class="caption">範例 8-15：使用 <code>push_str</code> 方法向 <code>String</code> 追加字串切片</span></p>
+<p>在這兩行之後，<code>s</code> 會包含 <code>foobar</code>。<code>push_str</code> 方法取得的是字串切片因爲我們並不需要取得參數的所有權。舉例來說範例 8-16 就說明了如果 <code>s2</code> 在追加其內容給 <code>s1</code> 之後卻不能使用的話，就很不妙了。</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    let mut s1 = String::from(&quot;foo&quot;);
     let s2 = &quot;bar&quot;;
@@ -235,7 +235,7 @@
     println!(&quot;s2 is {}&quot;, s2);
 <span class="boring">}
 </span></code></pre></pre>
-<p><span class="caption">範例 8-16：在內容追加給 <code>String</code> 後繼續使用字串 slice</span></p>
+<p><span class="caption">範例 8-16：在內容追加給 <code>String</code> 後繼續使用字串切片</span></p>
 <p>如果 <code>push_str</code> 方法會取得 <code>s2</code> 的所有權，我們就無法在最後一行印出其數值了。幸好這段程式碼是可以執行的！</p>
 <p>而 <code>push</code> 方法會取得一個字元作爲參數並加到 <code>String</code> 上。範例 8-17 顯示了一個使用 <code>push</code> 方法將字母 <em>l</em> 加到 <code>String</code> 的程式碼。</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
@@ -357,8 +357,8 @@ let answer = &amp;hello[0];
 </code></pre>
 <p>Rust 提拱多種不同的方式來解釋電腦中儲存的原始字串資料，讓每個程式無論是何種人類語言的資料，都可以選擇它們需要的呈現方式。</p>
 <p>Rust 還有一個不允許索引 <code>String</code> 來取得字元的原因是因爲，索引運算必須永遠預期是花費常數時間（O(1)）。但在 <code>String</code> 上無法提供這樣的效能保證，因爲 Rust 會需要從索引的開頭遍歷每個內容才能決定多少有效字元存在。</p>
-<h3><a class="header" href="#字串-slice" id="字串-slice">字串 slice</a></h3>
-<p>索引字串通常不是個好點子，因爲字符串索引要回傳的型別是不明確的，是要一個位元組數值、一個字元、一個形素群集還是一個字串 slice 呢。因此如果你真的想要使用索引建立字串 slice 的話，Rust 會要你更明確些。要明確指定你的索引與你想要的字串 slice，與其在 <code>[]</code> 只使用一個數字來索引，你可以在 <code>[]</code> 指定一個範圍來建立包含特定位元組的字串 slice：</p>
+<h3><a class="header" href="#字串切片" id="字串切片">字串切片</a></h3>
+<p>索引字串通常不是個好點子，因爲字符串索引要回傳的型別是不明確的，是要一個位元組數值、一個字元、一個形素群集還是一個字串切片呢。因此如果你真的想要使用索引建立字串切片的話，Rust 會要你更明確些。要明確指定你的索引與你想要的字串切片，與其在 <code>[]</code> 只使用一個數字來索引，你可以在 <code>[]</code> 指定一個範圍來建立包含特定位元組的字串切片：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -376,7 +376,7 @@ let s = &amp;hello[0..4];
 thread 'main' panicked at 'byte index 1 is not a char boundary; it is inside 'З' (bytes 0..2) of `Здравствуйте`', src/libcore/str/mod.rs:2069:5
 note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace.
 </code></pre>
-<p>你在使用範圍來建立字串 slice 時要格外小心，因爲這樣做有可能會使你的程式崩潰。</p>
+<p>你在使用範圍來建立字串切片時要格外小心，因爲這樣做有可能會使你的程式崩潰。</p>
 <h3><a class="header" href="#遍歷字串的方法" id="遍歷字串的方法">遍歷字串的方法</a></h3>
 <p>幸運的是你有其他方法來取得字串的元素。</p>
 <p>如果你需要對每個獨立的 Unicode 純量型別做運算的話，最好的方式是使用 <code>chars</code> 方法。對「नमस्ते」呼叫 <code>chars</code> 會將六個擁有 <code>char</code> 型別的數值拆開並回傳，這樣一來你就可以遍歷每個元素：</p>
