--- a/ch12-03-improving-error-handling-and-modularity.html
+++ b/ch12-03-improving-error-handling-and-modularity.html
@@ -261,7 +261,7 @@ fn parse_config(args: &amp;[String]) -&gt; Config {
 }
 </code></pre></pre>
 <p><span class="caption">範例 12-6：重構 <code>parse_config</code> 來返回 <code>Config</code> 結構體實例</span></p>
-<p>我們定義了一個結構體 <code>Config</code> 其欄位有 <code>query</code> 與 <code>filename</code>。<code>parse_config</code> 的簽名現在指明它會回傳一個 <code>Config</code> 數值。在 <code>parse_config</code> 的本體中，我們原先回傳 <code>args</code> 中 <code>String</code> 數值引用的字串 slice，現在我們定義 <code>Config</code> 來包含具所有權的 <code>String</code> 數值。<code>main</code> 中的 <code>args</code> 變數是引數數值的擁有者，而且只是借用它們給 <code>parse_config</code> 函式，這意味著如果 <code>Config</code> 嘗試取得 <code>args</code> 中數值的所有權的話，我們會違反 Rust 的借用規則。</p>
+<p>我們定義了一個結構體 <code>Config</code> 其欄位有 <code>query</code> 與 <code>filename</code>。<code>parse_config</code> 的簽名現在指明它會回傳一個 <code>Config</code> 數值。在 <code>parse_config</code> 的本體中，我們原先回傳 <code>args</code> 中 <code>String</code> 數值引用的字串切片，現在我們定義 <code>Config</code> 來包含具所有權的 <code>String</code> 數值。<code>main</code> 中的 <code>args</code> 變數是引數數值的擁有者，而且只是借用它們給 <code>parse_config</code> 函式，這意味著如果 <code>Config</code> 嘗試取得 <code>args</code> 中數值的所有權的話，我們會違反 Rust 的借用規則。</p>
 <p>我們可以用許多不同的方式來管理 <code>String</code> 的資料，但最簡單（卻較不有效率）的方式是對數值呼叫 <code>clone</code> 方法。這會複製整個資料讓 <code>Config</code> 能夠擁有，這會比引用字串資料還要花時間與記憶體。然而克隆資料讓我們的程式碼比較直白，因爲在此情況下我們就不需要管理引用的生命週期，犧牲一點效能以換取簡潔性是值得的。</p>
 <blockquote>
 <h3><a class="header" href="#使用-clone-的權衡取捨" id="使用-clone-的權衡取捨">使用 <code>clone</code> 的權衡取捨</a></h3>
