--- a/ch17-03-oo-design-patterns.html
+++ b/ch17-03-oo-design-patterns.html
@@ -262,7 +262,7 @@ impl State for Draft {}
 <p><span class="caption">範例 17-13：實作 <code>add_text</code> 方法來將文字加入文章的 <code>content</code> 中</span></p>
 <p><code>add_text</code> 方法接收 <code>self</code> 的可變引用，因爲我們在呼叫 <code>add_text</code> 時會改變 <code>Post</code> 實例。然後我們對 <code>content</code> 中的 <code>String</code> 呼叫<code>push_str</code>，並傳入 <code>text</code> 引數來存到 <code>content</code> 之中。此行爲與文章的狀態無關，所以它沒有被包含在狀態模式中。<code>add_text</code> 方法不會與 <code>state</code> 欄位有關係，但它是我們想支援的部分行爲之一。</p>
 <h3><a class="header" href="#確保文章草稿的內容爲空" id="確保文章草稿的內容爲空">確保文章草稿的內容爲空</a></h3>
-<p>儘管我們已經能透過 <code>add_text</code> 來爲我們的文章加些內容，但我們還是希望 <code>content</code> 方法會回傳空字串 slice，因爲文章還在草稿階段中，如範例 17-11 的第七行所示。現在先讓我們用能滿足需求最簡單的方式來實作 <code>content</code> 方法，也就是永遠回傳空字串 slice。之後一旦我們實作出能改變文章狀態爲已發佈的能力，我們會回來修改這部分。目前文章只能處於草稿階段，所以文章內容應該要永遠爲空。範例 17-14 顯示了此暫時的實作方式：</p>
+<p>儘管我們已經能透過 <code>add_text</code> 來爲我們的文章加些內容，但我們還是希望 <code>content</code> 方法會回傳空字串切片，因爲文章還在草稿階段中，如範例 17-11 的第七行所示。現在先讓我們用能滿足需求最簡單的方式來實作 <code>content</code> 方法，也就是永遠回傳空字串切片。之後一旦我們實作出能改變文章狀態爲已發佈的能力，我們會回來修改這部分。目前文章只能處於草稿階段，所以文章內容應該要永遠爲空。範例 17-14 顯示了此暫時的實作方式：</p>
 <p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">pub struct Post {
 </span><span class="boring">    state: Option&lt;Box&lt;dyn State&gt;&gt;,
@@ -295,7 +295,7 @@ impl State for Draft {}
 </span><span class="boring">
 </span><span class="boring">fn main() {}
 </span></code></pre></pre>
-<p><span class="caption">範例 17-14：<code>Post</code> 暫時實作的 <code>content</code> 方法，這會永遠回傳一個空字串 slice</span></p>
+<p><span class="caption">範例 17-14：<code>Post</code> 暫時實作的 <code>content</code> 方法，這會永遠回傳一個空字串切片</span></p>
 <p>透過此 <code>content</code> 方法，範例 17-11 的程式碼到地七行都能如期執行。</p>
 <h3><a class="header" href="#請求文章審核來變更它的狀態" id="請求文章審核來變更它的狀態">請求文章審核來變更它的狀態</a></h3>
 <p>接下來，我們需要增加請求文章審核的功能，這會將其狀態從 <code>Draft</code> 變更爲 <code>PendingReview</code>。如範例 14-15 所示：</p>
@@ -358,7 +358,7 @@ impl State for PendingReview {
 <p>我們需要暫時將 <code>state</code> 設爲 <code>None</code>，而非只是像這樣 <code>self.state = self.state.request_review();</code> 直接設置來取得 <code>state</code> 的數值。這確保 <code>Post</code> 不會在我們轉換到新狀態時，使用到舊的 <code>state</code> 數值。</p>
 <p><code>Draft</code> 的 <code>request_review</code> 方法需要回傳一個新的結構體 <code>PendingReview</code> box 實例，這代表文章正在等待審核的狀態。<code>PendingReview</code> 結構體也實作了 <code>request_review</code> 方法但沒有做任何轉換。反之，它只會回傳自己，因爲當我們向已經處於 <code>PendingReview</code> 狀態的文章請求審核的話，它應該會維持 <code>PendingReview</code> 的狀態。</p>
 <p>現在我們可以開始看出狀態模式的優勢了，<code>Post</code> 的 <code>request_review</code> 方法不管其 <code>state</code> 數值爲何都是一樣的。每個狀態負責自己的規則。</p>
-<p>我們維持 <code>Post</code> 的方法 <code>content</code> 不變，依然回傳一個空字串 slice。我們現在的 <code>Post</code> 可以處於 <code>PendingReview</code> 狀態與 <code>Draft</code> 狀態，但我們想要 <code>PendingReview</code> 狀態也有相同的行爲。現在範例 17-11 可以運行到第十行了！</p>
+<p>我們維持 <code>Post</code> 的方法 <code>content</code> 不變，依然回傳一個空字串切片。我們現在的 <code>Post</code> 可以處於 <code>PendingReview</code> 狀態與 <code>Draft</code> 狀態，但我們想要 <code>PendingReview</code> 狀態也有相同的行爲。現在範例 17-11 可以運行到第十行了！</p>
 <h3><a class="header" href="#新增改變-content-行爲的-approve-方法" id="新增改變-content-行爲的-approve-方法">新增改變 <code>content</code> 行爲的 <code>approve</code> 方法</a></h3>
 <p><code>approve</code> 方法會類似於 <code>request_review</code> 方法，它會設置 <code>state</code> 的數值爲目前狀態審核通過時該處於的狀態，如範例 17-16 所示：</p>
 <p><span class="filename">檔案名稱：src/lib.rs</span></p>
@@ -447,7 +447,7 @@ impl State for Published {
 <p><span class="caption">範例 17-16：對 <code>Post</code> 與 <code>State</code> 特徵實作 <code>approve</code> 方法</span></p>
 <p>我們在 <code>State</code> 特徵加上 <code>approve</code> 方法，並新增一個也有實作 <code>State</code> 的新結構體 <code>Published</code> 特徵。</p>
 <p>和 <code>request_review</code> 類似，如果我們對 <code>Draft</code> 呼叫 <code>approve</code> 方法，它不會有任何效果，因爲它會回傳 <code>self</code>。當我們對 <code>PendingReview</code> 呼叫 <code>approve</code>，它會回傳一個新的結構體 <code>Published</code> box 實例。<code>Published</code> 也有實作 <code>State</code> 特徵，對於 <code>request_review</code> 方法與 <code>approve</code> 方法，它只會回傳自己，因爲文章在這些情況下都應該維持 <code>Published</code> 狀態。</p>
-<p>現在我們需要更新 <code>Post</code> 的 <code>content</code> 方法，如果狀態是 <code>Published</code> 的話，我們想回傳文章的 <code>content</code> 欄位；不然的話，我們仍然回傳一個空字串 slice，如範例 17-17 所示：</p>
+<p>現在我們需要更新 <code>Post</code> 的 <code>content</code> 方法，如果狀態是 <code>Published</code> 的話，我們想回傳文章的 <code>content</code> 欄位；不然的話，我們仍然回傳一個空字串切片，如範例 17-17 所示：</p>
 <p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><code class="language-rust ignore does_not_compile"><span class="boring">pub struct Post {
 </span><span class="boring">    state: Option&lt;Box&lt;dyn State&gt;&gt;,
@@ -624,7 +624,7 @@ impl State for Published {
 <span class="boring">}
 </span></code></pre></pre>
 <p><span class="caption">範例 17-18：在 <code>State</code> 特徵加上 <code>content</code> 方法</span></p>
-<p>我們對 <code>content</code> 方法加上預設實作來回傳一個空字串 slice。這代表我們不需要在 <code>Draft</code> 與 <code>PendingReview</code> 結構體實作 <code>content</code>。<code>Published</code> 結構體會覆寫 <code>content</code> 方法並回傳 <code>post.content</code> 的數值。</p>
+<p>我們對 <code>content</code> 方法加上預設實作來回傳一個空字串切片。這代表我們不需要在 <code>Draft</code> 與 <code>PendingReview</code> 結構體實作 <code>content</code>。<code>Published</code> 結構體會覆寫 <code>content</code> 方法並回傳 <code>post.content</code> 的數值。</p>
 <p>注意到我們在此方法需要生命週期詮釋，如我們在第十章所討論到的。我們取得 <code>post</code> 的引用作爲引數並回傳 <code>post</code> 的部分引用，所以回傳引用的生命週期與 <code>post</code> 引數的生命週期有關聯。</p>
 <p>這樣就完成了！範例 17-11 可以成功執行！我們實作了網誌文章工作流程規則的狀態模式。規則邏輯會位於狀態物件中，而不會分散在 <code>Post</code> 中。</p>
 <h3><a class="header" href="#狀態模式的權衡取捨" id="狀態模式的權衡取捨">狀態模式的權衡取捨</a></h3>
